[package]
name = "bleuio"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Rust library for BleuIO"
readme = "README.md"
repository = "https://github.com/Yohannfra/bleuio"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serial = "0.4.0"
