[package]
name = "bleuio"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Rust library for BleuIO"
readme = "README.md"
repository = "https://github.com/Yohannfra/bleuio"
include = [
  "src/**/*",
  "Cargo.toml",
  "LICENSE*",
  "README.md",
  "examples/**/*"
]

[dependencies]
serial = "0.4.0"

[[example]]
name = "basic_at"
path = "examples/basic_at.rs"
